# iLog

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
src/: main.c
src/include/: file_log.h  iLog.h  log_time.h
src/lib/: file_log.c  iLog.c  log_time.c
